tried @PostConstruct and @PreDestroy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ operator.group=Aperture Science
 
 # Log levels severity mapping
 logging.level.org.springframework=DEBUG
-logging.level.org.hibernate=TRACE
+# logging.level.org.hibernate=TRACE
 
 # Log file name
 logging.file.name=logfiles/Springbootdemo.log
