feat(persistence): add mysql-connector-j and spring-boot-starter-data-jpa to pom.xml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,8 @@ logging.level.org.springframework=DEBUG
 # Log file name
 logging.file.name=logfiles/Springbootdemo.log
 # logging.file.path=logfiles
+
+# JDBC
+spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
