--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,9 +20,11 @@ logging.level.org.springframework=DEBUG
 
 # Log file name
 logging.file.name=logfiles/Springbootdemo.log
-# logging.file.path=logfiles
 
 # JDBC
 spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
+
+# turn off the Spring Boot banner
+spring.main.banner-mode =off
