chore(logging): reduce log output by adjusting logging level in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,11 +15,14 @@ operator.name=GLaDOS
 operator.group=Aperture Science
 
 # Log levels severity mapping
-logging.level.org.springframework=DEBUG
+# logging.level.org.springframework=DEBUG
 # logging.level.org.hibernate=TRACE
 
 # Log file name
-logging.file.name=logfiles/Springbootdemo.log
+# logging.file.name=logfiles/Springbootdemo.log
+
+# reduce logging level
+logging.level.root=warn
 
 # JDBC
 spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
