feat(entity): add Student entity with basic fields and annotations
StudentDAO, StudentDAOImpl with EntityManager,
changed properties for creating DB once and logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,10 @@ operator.group=Aperture Science
 
 # Log levels severity mapping
 # logging.level.org.springframework=DEBUG
-# logging.level.org.hibernate=TRACE
+
+# display SQL statements
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.orm.jdbc.bind=trace
 
 # Log file name
 # logging.file.name=logfiles/Springbootdemo.log
@@ -29,5 +32,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 
+# create table once, keep data
+spring.jpa.hibernate.ddl-auto=update
+
 # turn off the Spring Boot banner
-spring.main.banner-mode =off
+spring.main.banner-mode=off
