chore(doc): add springdoc-openapi-starter-webmvc-ui for Swagger UI support

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,22 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.13</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-lang3</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.19.0</version> <!-- or a fixed version if 3.17.1 isn't enough -->
+        </dependency>
 	</dependencies>
 
 	<build>
