--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
-spring.security.user.name=user
-spring.security.user.password=user
+#
+# replaced with DemoSecurityConfig
+#
+# spring.security.user.name=user
+# spring.security.user.password=user
