--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
-#
-# replaced with DemoSecurityConfig
-#
-# spring.security.user.name=user
-# spring.security.user.password=user
+logging.level.org.springframework.security=DEBUG
