--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=demo
 countries=Brazil,France,Germany,India,Mexico,Spain,United States
+programmingLanguages=Go,Java,Python,Rust
