--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=demo
 countries=Brazil,France,Germany,India,Mexico,Spain,United States
 programmingLanguages=Go,Java,Python,Rust
+operatingSystems=Linux,macOS,Windows
