--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.5.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example.demo.mvccrud</groupId>
-	<artifactId>cruddemo</artifactId>
+	<groupId>com.example.demo.thymeleaf</groupId>
+	<artifactId>thymeleaf</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>cruddemo</name>
+	<name>thymeleaf</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
