refactor(security): remove InMemoryUserDetailsManager in favor of database-backed authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.password=springstudent
 #
 # Log JDBC SQL statements for dev
 #
-logging.level.org.spingframework.jdbc.core=TRACE
+logging.level.org.springframework.jdbc.core=TRACE
