--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=cruddemo
+spring.main.banner-mode=off
+
+#
+# JDBC Properties
+#
+spring.datasource.url=jdbc:mysql://localhost:3306/hb-01-one-to-one-uni
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+#
+# Log JDBC SQL statements for dev
+#
+logging.level.org.springframework.jdbc.core=TRACE
+logging.level.root=warn
