--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.main.banner-mode=off
 #
 # JDBC Properties
 #
-spring.datasource.url=jdbc:mysql://localhost:3306/hb-02-one-to-one-bi
+spring.datasource.url=jdbc:mysql://localhost:3306/hb-03-one-to-many
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 #
